--- a/style.css
+++ b/style.css
@@ -1,2 +1,3 @@
 body {background-color: blueviolet;}
 h1{font-size:50px;text-align: center; color: white; }
+p{background-color: white; font-size:25px; text-align:justify;}
