--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
 body {background-color: blueviolet;}
 h1{font-size:50px;text-align: center; color: white; }
 p{background-color: white; font-size:25px; text-align:justify;}
+
+imagem{heigth : 50%; width: 50%;}
