--- a/style.css
+++ b/style.css
@@ -1,5 +1,29 @@
-body {background-color: blueviolet;}
-h1{font-size:50px;text-align: center; color: white; }
-p{background-color: white; font-size:25px; text-align:justify;}
+body{background-color: pink;}
+.menu1{
+    background-color: black; 
+    font-size: 40px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
 
-imagem{heigth : 50%; width: 100%;}
+}
+.menu1 {
+    background-color: skyblue;
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding:20px;
+    margin-top:20px;
+}
+.menu1 {
+    position:elative;
+    display: inline-block;
+}
+
+
+h1{
+    text-align: center;}
+
+h2{
+    color:blueviolet}
+imagem1{width: 100%; height: 15%; }
+p{background-color: aquamarine; text-align: justify; color: blue; font-size: 30px;}
